--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@
 @import './layouts/form-review.scss';
 @import './layouts/section-running.scss';
 @import './layouts/section-questions.scss';
+@import './layouts/section-talk.scss';
+@import './layouts/footer.scss';
 
 
 
