--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -1,4 +1,5 @@
-.backdrop{
+.backdrop,
+.backdrop__qoute{
     position: fixed;
     z-index: 10;
     width: 100%;
@@ -21,7 +22,8 @@
     visibility: hidden;
   
 }
-.modal{
+.modal,
+.modal__quote{
     position: absolute;
     top: 50%;
     left: 50%;
