--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,9 @@ img {
 }
 
 .solve__text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: var(--font-family);
   font-weight: 600;
   font-size: 22px;
@@ -322,6 +325,7 @@ img {
     border: 2px solid var(--beidg);
     border-radius: 24px;
     padding: 10px 16px;
+    background-color: transparent;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -330,6 +334,7 @@ img {
     border: 2px solid var(--beidg);
     border-radius: 24px;
     padding: 10px 16px;
+    background-color: transparent;
   }
 }
 
@@ -1116,7 +1121,7 @@ img {
 @media screen and (min-width: 1440px) {
   .testimonials__button {
     position: absolute;
-    bottom: 395px;
+    bottom: 375px;
     left: 1230px;
   }
 }
