--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -124,6 +124,9 @@
 }
 
 .solve__text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: var(--font-family);
     font-weight: 600;
     font-size: 22px;
