--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import './layouts/section-questions.scss';
 @import './layouts/section-talk.scss';
 @import './layouts/footer.scss';
+@import './layouts/mobile-menu.scss';
 
 
 
