--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,9 @@ img {
   left: 50%;
   transform: translateX(-50%);
   z-index: 5;
+}
+
+.menu__desktop-container {
   display: flex;
   width: 375px;
   padding: 20px 16px;
@@ -246,13 +249,13 @@ img {
   border-bottom: 1px solid var(--beidg);
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
-  .container__header {
+  .menu__desktop-container {
     width: 744px;
     padding: 20px 40px;
   }
 }
 @media screen and (min-width: 1440px) {
-  .container__header {
+  .menu__desktop-container {
     width: 1440px;
     padding: 22px 80px;
   }
@@ -1210,76 +1213,6 @@ img {
   }
 }
 
-.modal__menu-mobile {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-49%, -19%);
-  width: 343px;
-  padding: 50px 16px;
-  background-color: var(--bg);
-}
-@media screen and (min-width: 744px) and (max-width: 1439px) {
-  .modal__menu-mobile {
-    transform: translate(-50%, -50%);
-  }
-}
-
-.modal__menu-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 48px;
-  margin-bottom: 48px;
-}
-
-.button__menu_quote {
-  display: block;
-  width: 100%;
-  border: 2px solid var(--beidg);
-  border-radius: 24px;
-  padding: 10px 16px;
-  background-color: transparent;
-  margin-bottom: 48px;
-}
-
-.menu__mobile-subtitle {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 120%;
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--black-2);
-  margin-bottom: 12px;
-}
-
-.menu__mobile-text {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 120%;
-  color: var(--black-2);
-}
-
-.menu__mobile-instagram {
-  border: 1px solid var(--beidg);
-  border-radius: 24px;
-  padding: 8px 16px;
-  width: 115px;
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 120%;
-  text-transform: uppercase;
-  color: var(--black-2);
-}
-
 .form {
   border: 2px solid rgba(255, 255, 255, 0.1);
   border-radius: 8px;
@@ -1387,12 +1320,12 @@ img {
 
 .input__user-svg {
   position: absolute;
-  top: 77px;
+  top: 76px;
   left: 10px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .input__user-svg {
-    top: 67px;
+    top: 64px;
     left: 12px;
   }
 }
@@ -1405,18 +1338,36 @@ img {
 
 .input__phone-svg {
   position: absolute;
-  top: 127px;
+  top: 122px;
   left: 10px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .input__phone-svg {
-    top: 116px;
+    top: 110px;
     left: 14px;
   }
 }
 @media screen and (min-width: 1440px) {
   .input__phone-svg {
     top: 110px;
+    left: 14px;
+  }
+}
+
+.input__email-svg {
+  position: absolute;
+  top: 171px;
+  left: 10px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .input__email-svg {
+    top: 159px;
+    left: 14px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .input__email-svg {
+    top: 158px;
     left: 14px;
   }
 }
@@ -1987,4 +1938,94 @@ img {
     width: 1280px;
     height: 188px;
   }
+}
+
+.menu-mobile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 343px;
+  padding: 40px 16px;
+  background-color: var(--bg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .menu-mobile-container {
+    transform: translate(-50%, -50%);
+  }
+}
+
+.button__menu-close {
+  position: absolute;
+  z-index: 100;
+  top: 20px;
+  right: 20px;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: var(--bg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .button__menu-close {
+    top: 16px;
+    right: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .button__menu-close {
+    top: 16px;
+    right: 16px;
+  }
+}
+
+.modal__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+  margin-bottom: 48px;
+}
+
+.button__menu_quote {
+  display: block;
+  width: 100%;
+  border: 2px solid var(--beidg);
+  border-radius: 24px;
+  padding: 10px 16px;
+  background-color: transparent;
+  margin-bottom: 48px;
+}
+
+.menu__mobile-subtitle {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--black-2);
+  margin-bottom: 12px;
+}
+
+.menu__mobile-text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  color: var(--black-2);
+}
+
+.menu__mobile-instagram {
+  border: 1px solid var(--beidg);
+  border-radius: 24px;
+  padding: 8px 16px;
+  width: 115px;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: var(--black-2);
 }/*# sourceMappingURL=main.css.map */
