--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,20 @@ img {
   text-decoration: none;
 }
 
+.container {
+  width: 375px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .container {
+    width: 744px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 1440px;
+  }
+}
+
 .container__gray {
   width: 375px;
   padding: 80px 16px;
@@ -242,7 +256,6 @@ img {
   display: flex;
   width: 375px;
   padding: 20px 16px;
-  margin: 0 auto;
   background-color: var(--bg);
   align-items: center;
   justify-content: space-between;
@@ -287,9 +300,11 @@ img {
 @media screen and (min-width: 1440px) {
   .header__navigation {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
     gap: 32px;
-    margin-left: 344px;
+    margin-left: 244px;
   }
 }
 
@@ -1960,11 +1975,11 @@ img {
 
 .menu-mobile-container {
   display: flex;
+  width: 375px;
+  padding: 40px 16px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 375px;
-  padding: 40px 16px;
   background-color: var(--bg);
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
