--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,3 +1,13 @@
+.container{
+    width: 375px;
+    @include tablet{
+        width: 744px;   
+    }
+    @include desktop{
+        width: 1440px;
+    }
+}
+
 .container__gray{
     width: 375px;
     padding: 80px 16px;
