z-index form quote

--- a/sass/layouts/_section-picture.scss
+++ b/sass/layouts/_section-picture.scss
@@ -98,6 +98,7 @@
 
 .picture__form{
     position: absolute;
+    z-index: 4;
     width: 343px;
     border: 2px solid rgba(255, 255, 255, 0.1);
     border-radius: 8px;
