--- a/css/main.css
+++ b/css/main.css
@@ -595,6 +595,7 @@ img {
 
 .picture__form {
   position: absolute;
+  z-index: 4;
   width: 343px;
   border: 2px solid rgba(255, 255, 255, 0.1);
   border-radius: 8px;
