--- a/css/main.css
+++ b/css/main.css
@@ -1179,8 +1179,7 @@ img {
 }
 
 .backdrop,
-.backdrop__qoute,
-.backdrop__menu-mobile {
+.backdrop__qoute {
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -1195,16 +1194,9 @@ img {
 }
 @media screen and (min-width: 1440px) {
   .backdrop,
-  .backdrop__qoute,
-  .backdrop__menu-mobile {
+  .backdrop__qoute {
     overflow: hidden;
   }
-}
-
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
 }
 
 .modal,
