--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -1,6 +1,5 @@
 .backdrop,
-.backdrop__qoute,
-.backdrop__menu-mobile{
+.backdrop__qoute{
     position: fixed;
     z-index: 10;
     width: 100%;
@@ -16,12 +15,6 @@
         overflow: hidden;
 
     }
-}
-.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-  
 }
 .modal,
 .modal__quote{
